# exercise-2026

./: .gitignore  README.md  pyproject.toml
01_Python/: 01.1_GettingStarted.ipynb  02.3_PandasTour.ipynb  02.4_NumPyTour.ipynb  02_Python.ipynb
02_MapReduce/: 02_MapReduce.ipynb
03_Spark/: 03_Spark.ipynb
04_SQL/: 04_SQL.ipynb
05_Prediction/: 05.1_Classification.ipynb  05.2_Regression.ipynb
06_KMeans/: 07_Kmeans.ipynb
07_DeepLearning/: 08.1_deeplearning_keras.ipynb  08.2_deeplearning_pytorch.ipynb  08_DeepLearning.ipynb
08_NLP/: Transformers-pipelines.ipynb  WordEmbeddings.ipynb
09_Quantum/: 09_quantum_moon.ipynb
10_Reflection/: Reflection.md
scripts/: strip_colab_metadata.py
