[project]
name = "scalable-ai-exercises"
version = "2026.0.0"
description = "Exercises for Scalable AI Infrastructure course (LMU)"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.0,<3",
    "pandas>=2.0,<4",
    "matplotlib>=3.8,<4",
    "scikit-learn>=1.3,<2",
    "requests>=2.31,<3",
    "ipywidgets>=8.0,<9",
    "pillow>=10.0,<13",
    "jupyter>=1.0",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5,<5",
]
deeplearning = [
    "tensorflow>=2.15,<3",
    "torch>=2.1,<3",
    "torchvision>=0.16,<1",
]
nlp = [
    "transformers>=4.35,<6",
    "fasttext>=0.9.2,<1",
    "opencv-python-headless>=4.8,<5",
]
quantum = [
    "pennylane>=0.35,<1",
]
all = [
    "scalable-ai-exercises[spark,deeplearning,nlp,quantum]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
